contrib/manifests/example-backend/letsencrypt/example-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
  labels:
    app: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      serviceAccountName: example-backend
      containers:
        - name: example-backend
          image: ghcr.io/kubeware/example-backend:latest
          imagePullPolicy: Always
          args:
            - --namespace-prefix=cluster
            - --pretty-name=MangoDB
            - --consumer-scope=Namespaced
            - --oidc-issuer-client-id=$(OIDC-ISSUER-CLIENT-ID)
            - --oidc-issuer-client-secret=$(OIDC-ISSUER-CLIENT-SECRET)
            - --oidc-issuer-url=$(OIDC-ISSUER-URL)
            - --oidc-authorize-url=$(OIDC-AUTHORIZE-URL)
            - --oidc-callback-url=$(OIDC-CALLBACK-URL)
            - --listen-address=0.0.0.0:8080
            - --external-address=https://api.mangodb.de
            - --external-ca-file=/etc/tls/ca.crt
            - --external-server-name=78615b03-d644-4fb7-8395-8a60efd388f2.k8s.ondigitalocean.com
            - --cookie-signing-key=$(COOKIE-SIGNING-KEY)
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '100m'
              memory: 256Mi
          volumeMounts:
            - name: kubeware-ca
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: oidc-config
          configMap:
            name: oidc-config
        - name: oidc-secret
          secret:
            secretName: oidc-config
        - name: kubeware-ca
          secret:
            secretName: kubeware-ca
---
apiVersion: v1
kind: Service
metadata:
  name: example-backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: example-backend
      port: 80
      targetPort: 8080
  selector:
    app: example-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4 512k"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
spec:
  tls:
    - hosts:
        - mangodb.de
      secretName: mangodb-tls
  rules:
    - host: "mangodb.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example-backend
                port:
                  number: 80
          - pathType: Prefix
            path: "/dex"
            backend:
              service:
                name: dex
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
        - name: dex
          image: ghcr.io/dexidp/dex:latest-distroless
          args:
            - dex
            - serve
            - /etc/dex/config.yaml
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '100m'
              memory: 256Mi
          volumeMounts:
            - name: dex-config
              mountPath: /etc/dex
              readOnly: true
            - name: mangodb-tls
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: dex-config
          secret:
            secretName: dex-config
        - name: mangodb-tls
          secret:
            secretName: mangodb-tls
---
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: dex
      port: 80
      targetPort: 5556
  selector:
    app: dex
